2003-05-01  Matti Aarnio  <mea@zmailer.org>

	* smtpserver/smtpserver.c, smtpserver/smtpserver.h,
	  man/smtpserver.8, proto/smtpserver.conf.in:
	    tar-pit things from James MacKinnon.
	    Actually diff against 2.99.55, which has been adapted to
	    current CVS.

	* proto/zmailer.sh.in:
	    Quote typo introduced when adding  --zconfig   option..  Oops.

2003-04-30  Matti Aarnio  <mea@zmailer.org>

	* Makefile.in:
	   Version 2.99.56-pre5

	* README.UPGRADING:
	    The router internal logic change IS script incompatible!
	    Carefull out there with your  aliases.cf,  and  fqdnaliases.cf !

	* proto/cf/aliases.cf, proto/cf/fqdnaliases.cf, router/functions.c:
	    - When a list-expansions fails to produce recipient list,
	      do produce an error message only, when the message being
	      routed is _not_ an error message in itself.
	    - In scripts, do understand that the 'listexpand' can yield
	      a NULL list, and branch at it conditionally to do different
	      codepath behaviour.

	* scheduler/update.c:
	    Change in debug outputs to use more usefull spoolid reference.

2003-04-28  Matti Aarnio  <mea@zmailer.org>

	* transports/smtp/smtp.c, transports/libta/diagnostic.c:
	    Allow multiple calls to  diagnostic()  function,
	    and make sure that only first of them does actual
	    DIAGNOSTIC reporting, all the rest do just logging to
	    given FILE*.

	* transports/smtp/smtp.c:
	    More code re-arrangements regarding connection retries.

	* transports/smtp/smtp.c, transports/smtp/smtp.h:
	    A bit experimental re-arrangements of EZMLM related
	    processing of messages in smtp-level.  Moved  smtp
	    connection formation from before deliver() to within
	    it, so that it can (when needing) re-open the connection.

	* utils/mxverify/mxverify-cgi.c:
	    Auto-detect, if can use IPv6 addresses in testing.

	* scheduler/mailq.c, man/mailq.1:
	    Added '-Z' option to mailq, alike at scheduler, et.al.

2003-04-17  Matti Aarnio  <mea@zmailer.org>
