@@ -1,3 +1,10 @@
+2003-05-02  Matti Aarnio  <mea@zmailer.org>
+
+	* scheduler/agenda.c, scheduler/msgerror.c, scheduler/threads.c,
+	  scheduler/scheduler.c, scheduler/prototypes.h:
+	    Debugging the long living thing where "mailq -Q" mode reports
+	    negative counts for stored messages.
+
 2003-05-01  Matti Aarnio  <mea@zmailer.org>
 
 	* smtpserver/smtpserver.c, smtpserver/smtpserver.h,
